Refactored Qualifier types to Indexer types; changed KeyedReaderWriter<I, V> to not use Maybe<T> - this can be done with via its type arguments...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Data\BaseTestSubjectExodataSurrogate.cs" />
     <Compile Include="Collections\Generic\ProjectionCollectionTests.cs" />
     <Compile Include="ExceptionExtensionsTests.cs" />
+    <Compile Include="IndexerTests.cs" />
     <Compile Include="KeyedReaderWriterTests.cs" />
     <Compile Include="Linq\Expressions\ExpressionExtensionsTests.cs" />
     <Compile Include="FuncExtensionsTests.generated.cs">
