--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -112,6 +112,7 @@
     <Compile Include="ExceptionExtensions.cs" />
     <Compile Include="IDependencySymbol.cs" />
     <Compile Include="IKeyedReaderWriter.cs" />
+    <Compile Include="Indexer.cs" />
     <Compile Include="ISymbol.cs" />
     <Compile Include="KeyedReaderWriter.cs" />
     <Compile Include="Linq\Expressions\ExpressionExtensions.cs" />
@@ -124,8 +125,6 @@
     <Compile Include="IFluentInterface.cs" />
     <Compile Include="IMaybe.cs" />
     <Compile Include="Maybe.cs" />
-    <Compile Include="ReadableQualifier.cs" />
-    <Compile Include="ReadWriteQualifier.cs" />
     <Compile Include="Reflection\Emit\DynamicMethodExtensions.cs" />
     <Compile Include="Linq\EnumerableExtensions.cs" />
     <Compile Include="EnumExtensions.cs" />
@@ -140,10 +139,9 @@
     <Compile Include="Reflection\ReflectionExtensions.cs" />
     <Compile Include="IDependencyResolver.cs" />
     <Compile Include="IIdentifiable.cs" />
-    <Compile Include="IKnownQualifiers.cs" />
     <Compile Include="Ioc.cs" />
-    <Compile Include="IReadableQualifier.cs" />
-    <Compile Include="IReadWriteQualifier.cs" />
+    <Compile Include="IReadableIndexer.cs" />
+    <Compile Include="IReadWriteIndexer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Serialization\Cloneable.cs" />
     <Compile Include="Runtime\Serialization\CloneContext.cs" />
