Result<T, TObservation> is now the union of Maybe<T> and Outcome<TObservations>...

--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -118,6 +118,7 @@
     <Compile Include="IKeyedReaderWriter.cs" />
     <Compile Include="Indexer.cs" />
     <Compile Include="IOutcome.cs" />
+    <Compile Include="IResult.cs" />
     <Compile Include="ISymbol.cs" />
     <Compile Include="KeyedReaderWriter.cs" />
     <Compile Include="Linq\Expressions\ExpressionExtensions.cs" />
