Fixed Or & CopyTo extension methods; added TryFirst/TryLast/TrySingle extension methods to IEnumerable<T>; minor tweaks to AttributeExodataBindingSource...

--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Collections\Generic\SymbolDictionaryTests.cs" />
     <Compile Include="Collections\Generic\WeakDictionaryTestsBase.cs" />
     <Compile Include="Collections\Generic\WeakKeyMemberDictionaryTests.cs" />
+    <Compile Include="Data\AttributeExodataBindingSourceTests.cs" />
     <Compile Include="Data\CommonExodata.cs" />
     <Compile Include="Data\DescriptionAttribute.cs" />
     <Compile Include="Data\ExodataResolverExtensions.cs" />
