Added ValidatedNotNullAttribute to support FxCop detecting null checks...

--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -170,6 +170,7 @@
     <Compile Include="TrySelector.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="UnsafeCast.cs" />
+    <Compile Include="ValidatedNotNullAttribute.cs" />
     <Compile Include="WeakReference.cs" />
     <Compile Include="Xml\DeclarativeXmlParser.cs" />
     <Compile Include="Xml\XmlToken.cs" />
