Added IndentingTextWriter and supporting base class...

--- a/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
+++ b/Application/iSynaptic.Commons/iSynaptic.Commons.csproj
@@ -163,7 +163,9 @@
     <Compile Include="Syntax\OutcomeComprehension.cs" />
     <Compile Include="Syntax\ResultComprehension.cs" />
     <Compile Include="SystemClock.cs" />
+    <Compile Include="Text\IndentingTextWriter.cs" />
     <Compile Include="Text\Parsing\ScanningTextReader.cs" />
+    <Compile Include="Text\TextWriterDecorator.cs" />
     <Compile Include="Transactions\ITransactional.cs" />
     <Compile Include="Transactions\Transactional.cs" />
     <Compile Include="Transactions\TransactionalBase.cs" />
