--- a/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
+++ b/Testing/iSynaptic.Commons.UnitTests/iSynaptic.Commons.UnitTests.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Runtime\Serialization\Cloneable.ClrPrimitiveTests.cs" />
     <Compile Include="Runtime\Serialization\Cloneable.GeneralTests.cs" />
     <Compile Include="SystemClockTests.cs" />
+    <Compile Include="Text\IndentingTestWriterTests.cs" />
     <Compile Include="Text\Parsing\ScanningTextReaderTests.cs" />
     <Compile Include="Transactions\SimpleObject.cs" />
     <Compile Include="Transactions\TransactionalGatewayTests.cs" />
